@@ -1,3 +1,8 @@
+1999-07-03  Thomas Bushnell, BSG  <tb@mit.edu>
+
+	* io-ops.c (S_io_read): Use munmap instead of vm_deallocate.
+	(S_io_reauthenticate): Likewise.
+
 1999-06-13  Roland McGrath  <roland@baalperazim.frob.com>
 
 	* main.c (trivfs_goaway): Exit if there are no socket ports.
